pwsh is added as wel ass bash

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,4 @@
-#
-# OS.js - JavaScript Cloud/Web Desktop Platform
-#
-# Copyright (c) 2011-2020, Anders Evenrud <andersevenrud@gmail.com>
-# All rights reserved.
-#
-# Redistribution and use in source and binary forms, with or without
-# modification, are permitted provided that the following conditions are met:
-#
-# 1. Redistributions of source code must retain the above copyright notice, this
-#    list of conditions and the following disclaimer
-# 2. Redistributions in binary form must reproduce the above copyright notice,
-#    this list of conditions and the following disclaimer in the documentation
-#    and/or other materials provided with the distribution
-#
-# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
-# ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
-# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
-# ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
-# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
-# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
-# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
-# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-#
-# @author  Anders Evenrud <andersevenrud@gmail.com>
-# @licence Simplified BSD License
-#
-
-# THIS IS ONLY INTENDED FOR DEVELOPMENT USAGE
-
-version: '3'
+version: "3.9"
 
 services:
   osjs:
@@ -41,3 +9,12 @@ services:
       - .:/usr/src/osjs
     ports:
       - "${OSJS_NODE_PORT:-8000}:8000"
+    environment:
+      - NODE_ENV=production
+      - NODE_PORT=${OSJS_NODE_PORT:-8000}
+      - NODE_HOST=${OSJS_NODE_HOST:-localhost}
+      - NODE_CONFIG=${OSJS_NODE_CONFIG:-config.json}
+      - NODE_LOG=${OSJS_NODE_LOG:-osjs.log}
+      - NODE_PID=${OSJS_NODE_PID:-osjs.pid}
+      - NODE_USER=${OSJS_NODE_USER:-node}
+      - NODE_GROUP=${OSJS_NODE_GROUP:-node}
